# shadow_vertex

./: README.md  demo.py  imgui.ini  inspect_path.py  main.py  pyproject.toml  start.py
Notes/notebooks/: simplex.ipynb
docs/references/: references.bib
docs/references/c7138b1d86dced7779fffb42fde0e196/: info.yaml
rust_engine/: Cargo.toml
rust_engine/linprog_core/: Cargo.toml
rust_engine/linprog_core/src/: lib.rs  matrix_adt.rs  matrix_operations.rs  row_operations.rs  tableau.rs  tableau_operations.rs
rust_engine/src/: lib.rs
rust_engine/src/linalg/: matrix.rs  matrix_arithmetic.rs  matrix_operations.rs  matrix_row_operations.rs  mod.rs
rust_engine/src/model/: displays.rs  mod.rs  problem.rs  standard_form.rs  tableau_form.rs  tableau_operations.rs
rust_engine/src/solvers/: experimental_dual_simplex.rs  mod.rs  shadow_vertex_simplex.rs  simplex.rs  simplex_bland.rs  simplex_cycling.rs  simplex_dantzig.rs  solver.rs
src/linear_programming/models/: linear_program.py
src/models/: linear_matrix.py  linear_program.py
tests/: test_givens_projection.py  test_models.py  test_projection.py  test_rotation.py  test_smoothed.py  test_solver_history.py
utils/: __init__.py  smoothed.py
view/: __init__.py  app.py  polyhedron.py  renderer_2d.py  rotation.py
